# pyIPCS

./: .cspell.json  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .whitesource  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GETTING_STARTED.md  README.md  USER_GUIDE.md  pyproject.toml
.cspell/: cspell-babble.txt  cspell-ipcs_zos.txt  cspell-python.txt  cspell-shorthands.txt
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  other_request.md  update-documentation.md
dev/: dco_echo.sh  dco_setup.sh  install_setup.sh  setup.sh  upstream_setup.sh
dev/pre-commit/: dco_check.py
dev/setup/: add_upstream_setup.sh  dco_echo.sh  dco_setup.sh  dev_requirements.txt  pre-commit_setup.sh
examples/: README.md  basic.py  custom_subcmd.py  pyipcs_notebook.ipynb
src/pyipcs/: __init__.py  dump.py  error_handling.py  hex_obj.py  pyipcs_logging.py  tso_shell.py
src/pyipcs/dump/: __init__.py  dump.py  dump_header.py
src/pyipcs/session/: __init__.py  allocations.py  exec_contents.py  session.py  tso_cmd.py
src/pyipcs/subcmd/: __init__.py  cbf_rtct.py  ipldata.py  list_sliptrap.py  listdump_select_dsname.py  select_all.py  setdef.py  subcmd.py  subcmd_shell.py
src/pyipcs/util/: __init__.py  hex_util.py  ipcs_util.py  pyipcs_json_encoder.py  zoautil_py_util.py
src/tests/: README.md  conftest.py  mock_subcmd.py  mock_subcmd_jcl.py
src/tests/test_dump/: test_custom_dump.py  test_ddir_management.py  test_dump_ddir_management.py  test_dump_exceptions.py  test_set_dump.py  test_to_json.py
(+45 files in other folders)
