[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyipcs"
version = "1.2.0"
authors = [
  { name="John Gontaryk", email="johngontaryk@gmail.com" },
]
maintainers = [
  { name="John Gontaryk", email="johngontaryk@gmail.com"},
  { name="Joseph Arocho", email="josepharochomain@gmail.com" },
  { name="Ryan Bouchard", email="ryanbouchard@email.arizona.edu" },
  { name="Elliott Picker", email="elliott.picker@me.com" }
]
description = "Python Library to interface with IPCS(Interactive Problem Control System)"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX :: Other",
    "Topic :: System :: Hardware :: Mainframes",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["pyipcs*"]